Switch feed to academic ethics/corruption scholarship

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ethics News Board</title>
+  <title>Nonmarket Ethics Scholarship Feed</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="site-header">
-    <h1>Ethics News Board</h1>
+    <h1>Nonmarket Ethics Scholarship Feed</h1>
     <p id="last-updated">Loading latest stories...</p>
   </header>
 
